@@ -1,4 +1,5 @@
  * Fix notification icons (closes: #60)
+ * Add warning about non-Latin1 characters (closes: #64)
 
 KeePassDroid (2.0.3)
  * Improve password font handling. Handle failure to load font gracefully
